# phixiv

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  GOODBYE.md  LICENSE  README.md  deploy.bat  phixiv.conf  sample.env
.github/: FUNDING.yml
.github/workflows/: beta.yml  deploy.yml
src/: api.rs  artwork.rs  auth.rs  embed.rs  helper.rs  lib.rs  main.rs  oembed.rs  phixiv.rs  pixiv_url.rs  proxy.rs  state.rs
src/api/: info.rs  mod.rs
src/pixiv/: app_payload.rs  artwork.rs  auth.rs  mod.rs  model.rs  payloads.rs  response_payload.rs
templates/: artwork.html
