[package]
name = "phixiv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
askama = { git = "https://github.com/djc/askama.git" }
axum = { version = "0.6", features = ["original-uri"] }
dotenvy = "0.15.6"
http = "0.2.8"
isbot = "0.1"
lazy_static = "1.4.0"
minify-html = "0.10"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2"
urlencoding = "2.1.2"

[features]
small_images = []
