[package]
name = "phixiv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.6", features = ["original-uri", "headers", "macros"] }
# bytes = "1.4.0"
dotenvy = "0.15"
http = "0.2"
isbot = "0.1"
itertools = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "normalize-path"] }
tracing = { version = "0.1", features = ["log"] }
# tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
# url = "2"
# urlencoding = "2.1.2"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2.1.3"
